--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div>
   <main>
     <app-email-input />
-    <section class="flex w-full">
-      <app-email-list class="w-full"/>
-      <app-email-viewer class="w-full"/>
-    </section>
+    <div class="mail-container w-full">
+      <app-email-list/>
+      <app-email-viewer />
+    </div>
   </main>
 </div>
