--- a/src/app/pages/home/email-input/email-input-view/email-input-view.component.html
+++ b/src/app/pages/home/email-input/email-input-view/email-input-view.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center p-8 m-1 rounded-l-md border">
+<div class="flex justify-center p-8 ml-1 mr-1 mt-6 rounded-md border">
     <div class="flex flex-col w-full max-w-md items-center">
         <h1 class="w-full text-sm text-left">Your temporary email address</h1>
         <div class="w-full flex">
@@ -7,7 +7,7 @@
                 <svg class="w-5 mr-1" viewBox="0 0 24 24">
                     <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"></path>
                 </svg>
-                <span class="text-gray-400">Copy</span>
+                <span>Copy</span>
             </button>
         </div>
         <div class="w-full mt-2 flex items-center justify-center">
