--- a/src/app/pages/home/email-list/email-list-view/email-list-view.component.html
+++ b/src/app/pages/home/email-list/email-list-view/email-list-view.component.html
@@ -1,8 +1,8 @@
-<div class="ml-1 border border-r-0 border-t-0" >
+<div class="ml-1 border max-w-sm md:w-96 max-sm:max-w-full border-r-0 border-t-0" >
     <div class="p-2 border border-t-0 rounded-none">
         <h2 class="">Inbox</h2>
     </div>
-    <ul *ngIf="emails.length !== 0" class="rounded-none ml-1 mr-1 max-w-sm border border-b-0 ">
+    <ul *ngIf="emails.length !== 0" class="rounded-none ml-1 mr-1 max-w-sm max-sm:max-w-full border border-b-0 ">
         <li (click)="onEmailSelected(email)" class="border-b-2 p-2 hover:bg-sky-50 cursor-pointer" *ngFor="let email of emails">
             <h4 class="text-lg text-black">{{email.fromAddr}}</h4>
             <p class="text-blue-500">{{email.headerSubject}}</p>
